新增各种工具类及功能类

--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,47 @@
 		"libs/modules/egret/egret.js",
 		"libs/modules/egret/egret.web.js",
 		"libs/modules/res/res.js",
+		"libs/modules/is/is.js",
 		"libs/modules/eui/eui.js",
 		"libs/modules/tween/tween.js",
 		"promise/bin/promise.js"
 	],
 	"game": [
+		"bin-debug/core/display/LSprite.js",
+		"bin-debug/core/display/LGraphics.js",
+		"bin-debug/core/drag/DragTest.js",
+		"bin-debug/ThemeAdapter.js",
+		"bin-debug/core/api/App.js",
+		"bin-debug/core/api/LVars.js",
+		"bin-debug/core/api/other.js",
+		"bin-debug/core/api/SingletonFactory.js",
+		"bin-debug/core/display/LCircle.js",
+		"bin-debug/core/display/LEllipse.js",
 		"bin-debug/AssetAdapter.js",
-		"bin-debug/LoadingUI.js",
+		"bin-debug/core/display/LHeart.js",
+		"bin-debug/core/display/LPolygon.js",
+		"bin-debug/core/display/LRect.js",
+		"bin-debug/core/display/LRose.js",
+		"bin-debug/core/display/LRoundRect.js",
 		"bin-debug/Main.js",
-		"bin-debug/ThemeAdapter.js"
+		"bin-debug/core/display/LStar.js",
+		"bin-debug/LoadingUI.js",
+		"bin-debug/core/drag/GestureDrag.js",
+		"bin-debug/core/drag/GeturePinch.js",
+		"bin-debug/core/event/LEvent.js",
+		"bin-debug/core/event/ListenerManager.js",
+		"bin-debug/core/geom/Ellipse.js",
+		"bin-debug/core/geom/LPoint.js",
+		"bin-debug/core/interface/IGraphics.js",
+		"bin-debug/core/interface/IRegexEnum.js",
+		"bin-debug/core/layout/Distribution.js",
+		"bin-debug/core/utils/Base64.js",
+		"bin-debug/core/utils/ColorUtil.js",
+		"bin-debug/core/utils/Long.js",
+		"bin-debug/core/utils/MD5.js",
+		"bin-debug/core/utils/NumberUtil.js",
+		"bin-debug/core/utils/ObjectUtil.js",
+		"bin-debug/core/utils/RatioUtil.js",
+		"bin-debug/core/utils/ValidationUtil.js"
 	]
 }
